<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">MetroCalc</string>
<string name="plus5">+$0.05</string>
<string name="minus5">-$0.05</string>
<string name="plus25">+$.25</string>
<string name="plus100">+$1.00</string>
<string name="minus25">-$0.25</string>
<string name="minus100">-$1.00</string>
<string name="currentValueLabel">Current Value</string>
<string name="add">Add</string>
</resources>
